# Copyright (C) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

################################################################
# C, Main source file here.
################################################################
config("datatransmitmgr_config") {
  include_dirs = [ "include" ]
}

declare_args() {
  dataclassification_feature_enabled = true
  if (defined(global_parts_info) &&
      !defined(global_parts_info.commonlibrary_c_utils)) {
    dataclassification_feature_enabled = false
  }
}

ohos_shared_library("data_transit_mgr") {
  subsystem_name = "security"
  part_name = "dataclassification"

  public_configs = [ ":datatransmitmgr_config" ]

  include_dirs = [ "include" ]

  sources = [
    "../../../frameworks/datatransmitmgr/dev_slinfo_adpt.c",
    "../../../frameworks/datatransmitmgr/dev_slinfo_list.c",
    "../../../frameworks/datatransmitmgr/dev_slinfo_mgr.c",
  ]

  if (os_level == "standard") {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
      integer_overflow = true
      ubsan = true
      boundary_sanitize = true
      stack_protector_ret = true
    }
  }
  if (dataclassification_feature_enabled) {
    external_deps = [ "c_utils:utils" ]
  }
  external_deps += [
    "device_security_level:dslm_sdk",
    "hilog:libhilog",
  ]

  defines = [ "HILOG_ENABLE" ]

  cflags = [
    "-DHILOG_ENABLE",
    "-Wall",
  ]
}
