# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
module_output_path = "dataclassification/fbe_iudf_xattr"

config("fbe_iudf_xattr_test_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//base/security/dataclassification/test/unittest/fbe_iudf_xattr",
    "//base/security/dataclassification/interfaces/innerkits/fbe_iudf_xattr/include",
    "//third_party/googletest/googletest/include",
  ]
  cflags = [ "-DHILOG_ENABLE" ]
}

ohos_unittest("IudfXattrTest") {
  part_name = "dataclassification"
  subsystem_name = "security"
  module_out_path = module_output_path

  sources = [ "fbe_iudf_xattr_test.cpp" ]

  configs = [ ":fbe_iudf_xattr_test_config" ]

  deps = [ "//base/security/dataclassification/interfaces/innerkits/fbe_iudf_xattr:fbe_iudf_xattr" ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
}

group("fbe_iudf_xattr_test") {
  testonly = true
  deps = [ ":IudfXattrTest" ]
}
