import("//build/test.gni")
module_output_path = "dataclassification/hwdevsl"

config("hwdevsl_private_config") {
    visibility = [ ":*" ]
    include_dirs = [
        "//base/security/dataclassification/test/unittest/hwdevsl",
        "//base/security/dataclassification/interfaces/innerkits/hwdevsl/include/1.0",
        "//third_party/googletest/googletest/include",
        "utils/native/base/include",
    ]

    cflags = [ "-DHILOG_ENABLE" ]
}

ohos_unittest("HwDslTest") {
    part_name = "dataclassification"
    subsystem_name = "security"
    module_out_path = module_output_path

    sources = [ "hwdevsl_test.cpp" ]

    configs = [ ":hwdevsl_private_config"]

    deps = [
        "//base/security/dataclassification/interfaces/innerkits/hwdevsl:hwdsl",
        "//utils/native/base:utils"
    ]

    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
}

group("hwdevsl_test") {
    testonly = true
    deps = [ ":HwDslTest" ]
}